--- a/mockup-rokyy/rokyy.css
+++ b/mockup-rokyy/rokyy.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500;700&display=swap');
 
+:root {
+    --color-cyan: #2dd3e9;
+    --color-purple: #6660d7;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -15,8 +20,20 @@
     font-weight: 700;
 }
 
+* a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 html {
     background: #fff;
+}
+
+input {
+    border: none;
+    font-size: 1.2rem;
+    border-radius: 1rem;
+    box-shadow: inset rgba(0, 0, 0, 0.4) 1px 1px 4px;
 }
 
 .inline {
@@ -30,13 +47,20 @@ html {
     z-index: 500;
 }
 
-#left-box {
+.bottom {
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+.top {
+    -webkit-clip-path: polygon(0% 10%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.left-box {
     float: left;
     margin-left: 1rem;
     margin-right: auto;
 }
 
-#right-box {
+.right-box {
     float: right;
     margin-left: auto;
     margin-right: 1rem;
@@ -74,9 +98,18 @@ html {
 #header {
     background: #fff;
     width: 100%;
-    box-shadow: 
-    /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 0%, 0 100%); */
-    /* clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);  */
+    /* box-shadow:  */
+}
+
+#about {
+    position: inherit;
+    margin-top: 1rem;
+    font-size: 1rem;
+}
+
+#about a {
+    color: #ccc;
+    text-shadow: none;
 }
 
 #top-logo {
@@ -90,23 +123,53 @@ html {
     /* margin-top: -1rem; */
     min-height: 10rem;
     width: 100%;
-    background: #6660d7;
+    background: var(--color-purple);
 }
 
 #container-form {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     max-width: 35rem;
 }
+
+#form-grid {
+    display: grid;
+    grid-template-columns: 10rem auto;
+    grid-row-gap: 1rem;
+}
+
+.form-left {
+    text-align: right;
+    padding-right: 1rem;
+    font-size: 1.2rem;
+}
+
 
 #rokyy-info {
     /* margin-top: -1.5rem; */
     width: 100%;
-    min-height: 10rem;
+    /* min-height: 12rem; */
     background: url("assets/happy_family.jpg");
     background-size: 100%;
+    background-position: center;
+    padding-bottom: 2rem;
+}
+
+.fluff {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding: 2rem;
+    font-size: 1.5rem;
+    max-width: 30rem;
+    text-shadow: none;
+    color: #666;
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 5px;
 }
 
 #footer {
@@ -116,7 +179,7 @@ html {
 #sup-footer-container {
     padding-top: 1rem;
     height: 2rem;
-    background: #2dd3e9;
+    background: var(--color-cyan);
 }
 
 #legal {
